--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,18 +5,18 @@
       <img src="../../assets/logo.jpeg" alt="logo">
     </div>      
     <div class="form-group">
-      <label for="exampleInputEmail1">User Name</label>
-      <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+      <label for="exampleInputEmail1">Email</label>
+      <input [(ngModel)]="user.email" name="email" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input [(ngModel)]="user.password" name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <div class="form-group form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Remember Me?</label>
     </div>
-    <button mat-raised-button color="primary">Login</button>
+    <button mat-raised-button color="primary" (click)="login(user)">Login</button>
   </form>
   <div></div>
 </div>
